--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,12 @@ services:
             BIND_ADDRESS: 0.0.0.0
             PORT: 5505
             DATABASE_URL: ${DATABASE_URL}
+
     auth:
         build: ./cloud-auth
         container_name: auth
         networks: 
             - motum-network
-        ports: 
-            - "${API_PORT}:5506"
         depends_on: 
             - user-registry
         environment: 
@@ -24,6 +23,20 @@ services:
             USER_REGISTRY_URL: "user-registry:5505"
             ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET}
             REFRESH_TOKEN_SECRET: ${REFRESH_TOKEN_SECRET}
+
+    api-gateway:
+        build: ./cloud-api-gateway
+        container_name: api-gateway
+        networks: 
+            - motum-network
+        ports:
+            - ${API_PORT}:5507
+        depends_on: 
+            - auth
+        environment: 
+            BIND_ADDRESS: 0.0.0.0
+            PORT: 5507
+            AUTH_SERVICE_URL: "auth:5506"
 
 networks: 
     motum-network:
