--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         environment: 
             BIND_ADDRESS: 0.0.0.0
             PORT: 5505
-            DATABASE_URL: ${DATABASE_URL}
+            DATABASE_URL: ${USER_DATABASE_URL}
 
     auth:
         build: ./cloud-auth
@@ -23,6 +23,7 @@ services:
             USER_REGISTRY_URL: "user-registry:5505"
             ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET}
             REFRESH_TOKEN_SECRET: ${REFRESH_TOKEN_SECRET}
+            DATABASE_URL: ${AUTH_DATABASE_URL}
 
     api-gateway:
         build: ./cloud-api-gateway
