--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "cloud-user-registry"]
-	path = cloud-user-registry
+	path = user-registry-service
 	url = https://github.com/MotumInc/user-registry-service.git
 [submodule "cloud-auth"]
-	path = cloud-auth
+	path = auth-service
 	url = https://github.com/MotumInc/auth-service.git
 [submodule "cloud-api-gateway"]
-	path = cloud-api-gateway
+	path = api-gateway-service
 	url = https://github.com/MotumInc/auth-service.git
+[submodule "user-service"]
+	path = user-service
+	url = https://github.com/MotumInc/user-service.git
