--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services: 
     user-registry:
-        build: ./cloud-user-registry
+        build: ./user-registry-service
         container_name: user-registry
         networks: 
             - motum-network
@@ -11,7 +11,7 @@ services:
             DATABASE_URL: ${USER_DATABASE_URL}
 
     auth:
-        build: ./cloud-auth
+        build: ./auth-service
         container_name: auth
         networks: 
             - motum-network
@@ -20,13 +20,24 @@ services:
         environment: 
             BIND_ADDRESS: 0.0.0.0
             PORT: 5506
+            SERVICE_PORT: 5509
             USER_REGISTRY_URL: "user-registry:5505"
             ACCESS_TOKEN_SECRET: ${ACCESS_TOKEN_SECRET}
             REFRESH_TOKEN_SECRET: ${REFRESH_TOKEN_SECRET}
             DATABASE_URL: ${AUTH_DATABASE_URL}
 
+    user:
+        build: ./user-service
+        container_name: user
+        networks: 
+            - motum-network
+        environment: 
+            BIND_ADDRESS: 0.0.0.0
+            PORT: 5508
+            DATABASE_URL: ${USER_DATABASE_URL}
+
     api-gateway:
-        build: ./cloud-api-gateway
+        build: ./api-gateway-service
         container_name: api-gateway
         networks: 
             - motum-network
@@ -38,6 +49,8 @@ services:
             BIND_ADDRESS: 0.0.0.0
             PORT: 5507
             AUTH_SERVICE_URL: "auth:5506"
+            AUTH_VERIFICATION_SERVICE_URL: "auth:5509"
+            USER_SERVICE_URL: "http://user:5508"
 
 networks: 
     motum-network:
